--- a/404.md
+++ b/404.md
@@ -1,11 +1,13 @@
 ---
 layout: splash
 title: Page not found
+permalink: /404.html
 ---
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12 text-center">
+    <div class="col-md-12">
+      <h1>404</h1>
       <p>The page you asked for wasn't found. <a href="/">Go home?</a></p>
     </div>
   </div>
